Split into separate subdirs for different chips
and updated GitHub Actions workflow to build all of them.

--- a/.github/workflows/user_build.yml
+++ b/.github/workflows/user_build.yml
@@ -3,11 +3,6 @@ name: Build firmware according to user config file
 on:
   workflow_call:
     inputs:
-      keyboard_toml_path:
-        description: "Path to the keyboard.toml"
-        default: "keyboard.toml"
-        required: false
-        type: string
       vial_json_path:
         description: "Path to the vial.json"
         default: "vial.json"
@@ -17,6 +12,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        chip:
+          - rp2040
+          - stm32f103c8
+          - esp32c3
+          - nrf52840
     steps:
       - uses: cargo-bins/cargo-binstall@main
       - name: Install rmkit and cargo-make
@@ -26,17 +28,17 @@ jobs:
         run: wget http://nz2.archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_amd64.deb && sudo dpkg -i libssl1.1_1.1.1f-1ubuntu2_amd64.deb
       - name: Create firmware project
         working-directory: .
-        run: rmkit create --keyboard-toml-path ${{ inputs.keyboard_toml_path }} --vial-json-path ${{ inputs.vial_json_path }} --target-dir rmk
+        run: rmkit create --keyboard-toml-path ${{ matrix.chip }}/keyboard.toml --vial-json-path ${{ inputs.vial_json_path }} --target-dir ${{ matrix.chip }}/rmk
       - name: Build firmware
-        working-directory: ./rmk
+        working-directory: ./${{ matrix.chip }}/rmk
         run: cargo make uf2 --release
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: firmware_uf2
-          path: rmk/*.uf2
+          path: ${{ matrix.chip }}/rmk/*.uf2
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: firmware_hex
-          path: rmk/*.hex
+          path: ${{ matrix.chip }}/rmk/*.hex
