--- a/rp2040/keyboard.toml
+++ b/rp2040/keyboard.toml
@@ -1,33 +1,31 @@
 # Documentation: https://haobogu.github.io/rmk/keyboard_configuration.html
 [keyboard]
-name = "RMK Keyboard"
-product_name = "RMK Keyboard"
-vendor_id = 0x4c4b
-product_id = 0x4643
-manufacturer = "haobo"
+name = "RMK Test rp2040"
+product_name = "RMK Test rp2040"
+vendor_id = 0x726d
+product_id = 0x6b00
+manufacturer = "whitelynx"
 chip = "rp2040"
 
 [matrix]
 # Input and output pins are mandatory
-input_pins = ["PIN_6", "PIN_7", "PIN_8", "PIN_9"]
-output_pins = ["PIN_19", "PIN_20", "PIN_21"]
+input_pins = ["PIN_6", "PIN_7", "PIN_8"]
+output_pins = ["PIN_9", "PIN_10", "PIN_11"]
 # WARNING: Currently row2col/col2row is set in RMK's feature gate, configs here do nothing actually
 # row2col = true
 
 [layout]
-rows = 4
+rows = 3
 cols = 3
 layers = 2
 keymap = [
     [
         ["A", "B", "C"],
         ["Kc1", "Kc2", "Kc3"],
-        ["LCtrl", "MO(1)", "LShift"],
-        ["OSL(1)", "LT(2, Kc9)", "LM(1, LShift | LGui)"]
+        ["LCtrl", "MO(1)", "LShift"]
     ],
     [
         ["_", "TT(1)", "TG(2)"],
-        ["_", "_", "_"],
         ["_", "_", "_"],
         ["_", "_", "_"]
     ],
@@ -40,7 +38,7 @@ keymap = [
 # scrolllock.pin = "PA3"
 # scrolllock.low_active = true
 # Just ignore if no light pin is used for it
-# numslock.pin = "PA5"
+numslock.pin = "PIN_12"
 # numslock.low_active = true
 
 
