fix(.github/workflows/build.yml): use user_build.yml from _this_ repo, not the template

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,4 +7,4 @@ on:
 
 jobs:
   build:
-    uses: haobogu/rmk-project-template/.github/workflows/user_build.yml@master
+    uses: whitelynx/rmk-testing/.github/workflows/user_build.yml@master
