fix(*/keyboard.toml): uncommented numslock.low_active

--- a/esp32c3/keyboard.toml
+++ b/esp32c3/keyboard.toml
@@ -39,7 +39,7 @@ keymap = [
 # scrolllock.low_active = true
 # Just ignore if no light pin is used for it
 numslock.pin = "GPIO21"
-# numslock.low_active = true
+numslock.low_active = true
 
 
 
