--- a/nrf52840/keyboard.toml
+++ b/nrf52840/keyboard.toml
@@ -39,7 +39,7 @@ keymap = [
 # scrolllock.low_active = true
 # Just ignore if no light pin is used for it
 numslock.pin = "P0_29"
-# numslock.low_active = true
+numslock.low_active = true
 
 
 
