--- a/rp2040/keyboard.toml
+++ b/rp2040/keyboard.toml
@@ -39,7 +39,7 @@ keymap = [
 # scrolllock.low_active = true
 # Just ignore if no light pin is used for it
 numslock.pin = "PIN_12"
-# numslock.low_active = true
+numslock.low_active = true
 
 
 
