--- a/.github/workflows/user_build.yml
+++ b/.github/workflows/user_build.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: cargo-bins/cargo-binstall@main
       - name: Install rmkit and cargo-make
-        run: cargo binstall cargo-make rmkit -y
+        run: cargo binstall flip-link cargo-make rmkit -y
       - uses: actions/checkout@v3
       - name: Install libssl
         run: wget http://nz2.archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_amd64.deb && sudo dpkg -i libssl1.1_1.1.1f-1ubuntu2_amd64.deb
@@ -31,14 +31,19 @@ jobs:
         run: rmkit create --keyboard-toml-path ${{ matrix.chip }}/keyboard.toml --vial-json-path ${{ inputs.vial_json_path }} --target-dir ${{ matrix.chip }}/rmk
       - name: Build firmware
         working-directory: ./${{ matrix.chip }}/rmk
+        run: cargo build --release
+      - name: Build UF2 image
+        if: ${{ matrix.chip != 'esp32c3' }}
+        working-directory: ./${{ matrix.chip }}/rmk
         run: cargo make uf2 --release
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: firmware_uf2
-          path: ${{ matrix.chip }}/rmk/*.uf2
-      - name: Upload artifacts
+      - name: Upload hex artifacts
         uses: actions/upload-artifact@v4
         with:
           name: firmware_hex
           path: ${{ matrix.chip }}/rmk/*.hex
+      - name: Upload UF2 artifacts
+        if: ${{ matrix.chip != 'esp32c3' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: firmware_uf2
+          path: ${{ matrix.chip }}/rmk/*.uf2
