--- a/stm32f103c8/keyboard.toml
+++ b/stm32f103c8/keyboard.toml
@@ -41,7 +41,8 @@ keymap = [
 numslock.pin = "PA6"
 numslock.low_active = true
 
-
+[dependency]
+defmt_log = false
 
 [storage]
 # Storage feature is enabled by default
