fix(.github/workflows/user_build.yml): skip stm32f103c8 chip
since it's currently failing to build.

--- a/.github/workflows/user_build.yml
+++ b/.github/workflows/user_build.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         chip:
           - rp2040
-          - stm32f103c8
+          #- stm32f103c8
           - esp32c3
           - nrf52840
     steps:
