--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,11 @@
 name: Build RMK firmware
 
+on:
+  workflow_dispatch:
+  push:
+    paths:
+      - "**"
+
 jobs:
   build:
     runs-on: ubuntu-latest
