--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,10 @@ jobs:
           echo "arch=$ARCH" >> $GITHUB_OUTPUT
       - name: Build bin image
         if: ${{ matrix.chip == 'esp32c3' }}
-        working-directory: ./${{ matrix.chip }}/rmk
+        working-directory: ./${{ matrix.chip }}
         run: |
-          PROJECT_NAME=`rmkit get-project-name --keyboard-toml-path ../keyboard.toml`
+          PROJECT_NAME=`rmkit get-project-name --keyboard-toml-path keyboard.toml`
+          cd rmk
           espflash save-image --chip ${{ matrix.chip }} "target/${{ steps.arch.outputs.arch }}/release/$PROJECT_NAME" "./${{ matrix.chip }}/rmk/$PROJECT_NAME.bin"
       - name: Upload hex artifacts
         uses: actions/upload-artifact@v4
