hack(.github/workflows/build.yml): more troubleshooting

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,7 @@ jobs:
         if: ${{ matrix.chip == 'esp32c3' }}
         working-directory: ./${{ matrix.chip }}
         run: |
+          set -x
           pwd
           ls
           PROJECT_NAME=$(rmkit get-project-name --keyboard-toml-path $(pwd)/keyboard.toml)
