--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         chip:
           - rp2040
-          #- stm32f103c8
+          - stm32f103c8
           - esp32c3
           - nrf52840
     steps:
